fix overflow scroll container in tables

--- a/privacyidea/static_new/src/styles/table.scss
+++ b/privacyidea/static_new/src/styles/table.scss
@@ -63,8 +63,15 @@ $description-width: 18rem;
     margin-right: $scrollable-margin-right;
     padding-right: $scrollable-padding-right;
     display: flex;
-    justify-content: center;
     flex-direction: column;
+
+    > * { flex: 0 0 auto; }
+
+    &::before,
+    &::after {
+      content: "";
+      flex: 1 0 auto;
+    }
   }
 
   .realm-list {
